[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["Afroze Mohamed <itsmeafroze@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4"
freezegun = "^0.3.15"
boto3 = "^1.13"
moto = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
